Segunda actualización - Se encuentra en creación y modificación el ICrud de citas por para los pacientes. Datos impresos del paciente al 100%

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServicioCita.cs" />
     <Compile Include="ServicioConsultorio.cs" />
     <Compile Include="ServicioOrtodoncista.cs" />
     <Compile Include="ServicioPaciente.cs" />
