--- a/ENTITY/ENTITY.csproj
+++ b/ENTITY/ENTITY.csproj
@@ -45,10 +45,13 @@
     <Compile Include="Config.cs" />
     <Compile Include="Consultorio.cs" />
     <Compile Include="Diagnostico.cs" />
+    <Compile Include="Factura.cs" />
     <Compile Include="Ortodoncista.cs" />
     <Compile Include="Paciente.cs" />
+    <Compile Include="Pago.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tratamiento.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
