--- a/Clinica/GUI.csproj
+++ b/Clinica/GUI.csproj
@@ -62,6 +62,12 @@
     <Compile Include="FrmAgendarCita.Designer.cs">
       <DependentUpon>FrmAgendarCita.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmConsultorio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmConsultorio.Designer.cs">
+      <DependentUpon>FrmConsultorio.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmContraseña.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -147,6 +153,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmAgendarCita.resx">
       <DependentUpon>FrmAgendarCita.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmConsultorio.resx">
+      <DependentUpon>FrmConsultorio.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmContraseña.resx">
       <DependentUpon>FrmContraseña.cs</DependentUpon>
@@ -244,6 +253,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Images\IconPapeles.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Images\IconConsultorio.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
