Guardado de emergencia

--- a/Clinica/GUI.csproj
+++ b/Clinica/GUI.csproj
@@ -80,6 +80,12 @@
     <Compile Include="FrmAcceso.Designer.cs">
       <DependentUpon>FrmAcceso.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmGestionCita.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmGestionCita.Designer.cs">
+      <DependentUpon>FrmGestionCita.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmInformacion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -162,6 +168,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmAcceso.resx">
       <DependentUpon>FrmAcceso.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmGestionCita.resx">
+      <DependentUpon>FrmGestionCita.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmInformacion.resx">
       <DependentUpon>FrmInformacion.cs</DependentUpon>
