--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -79,7 +79,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseRepository.cs" />
-    <Compile Include="Conexion.cs" />
+    <Compile Include="ConexionOracle.cs" />
+    <Compile Include="DBConsultorio.cs" />
+    <Compile Include="DBOrtodoncista.cs" />
+    <Compile Include="DBPaciente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositorioCita.cs" />
     <Compile Include="RepositorioConsultorio.cs" />
