Anexé y creé el repositorio de tratamientos conectado a la base de datos. Sin embargo, no lo he probado y/o utilizado aun; Tambien eliminé finalmente todo lo relacionado a los repositorios de archivo plano. ¿Proximamente? Realizare los repositorios de factura y pago y eso seria todo para darlo todo nuevamente a la aplicación.

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ServicioOrtodoncista.cs" />
     <Compile Include="ServicioPaciente.cs" />
     <Compile Include="ServicioPersona.cs" />
+    <Compile Include="ServicioTratamiento.cs" />
     <Compile Include="Validaciones.cs" />
   </ItemGroup>
   <ItemGroup>
