--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -78,19 +78,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseRepository.cs" />
     <Compile Include="ConexionOracle.cs" />
     <Compile Include="DBCita.cs" />
     <Compile Include="DBConsultorio.cs" />
     <Compile Include="DBDiagnostico.cs" />
     <Compile Include="DBOrtodoncista.cs" />
     <Compile Include="DBPaciente.cs" />
+    <Compile Include="DBTratamiento.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepositorioCita.cs" />
-    <Compile Include="RepositorioConsultorio.cs" />
-    <Compile Include="RepositorioDiagnostico.cs" />
-    <Compile Include="RepositorioOrtodoncista.cs" />
-    <Compile Include="RepositorioPaciente.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ENTITY\ENTITY.csproj">
