--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -44,8 +44,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicioCita.cs" />
     <Compile Include="ServicioConsultorio.cs" />
+    <Compile Include="ServicioDiagnostico.cs" />
+    <Compile Include="ServicioFactura.cs" />
     <Compile Include="ServicioOrtodoncista.cs" />
     <Compile Include="ServicioPaciente.cs" />
+    <Compile Include="ServicioPago.cs" />
     <Compile Include="ServicioPersona.cs" />
     <Compile Include="ServicioTratamiento.cs" />
     <Compile Include="Validaciones.cs" />
