--- a/Clinica/GUI.csproj
+++ b/Clinica/GUI.csproj
@@ -98,6 +98,12 @@
     <Compile Include="FrmGestionPaciente.Designer.cs">
       <DependentUpon>FrmGestionPaciente.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmGestionTratamientos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmGestionTratamientos.Designer.cs">
+      <DependentUpon>FrmGestionTratamientos.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmInfoDiagnostico.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -207,6 +213,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmGestionPaciente.resx">
       <DependentUpon>FrmGestionPaciente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmGestionTratamientos.resx">
+      <DependentUpon>FrmGestionTratamientos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmInfoDiagnostico.resx">
       <DependentUpon>FrmInfoDiagnostico.cs</DependentUpon>
