--- a/Clinica/GUI.csproj
+++ b/Clinica/GUI.csproj
@@ -92,6 +92,12 @@
     <Compile Include="FrmGestionCita.Designer.cs">
       <DependentUpon>FrmGestionCita.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmGestionFactura.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmGestionFactura.Designer.cs">
+      <DependentUpon>FrmGestionFactura.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmGestionPaciente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,11 +116,23 @@
     <Compile Include="FrmInfoDiagnostico.Designer.cs">
       <DependentUpon>FrmInfoDiagnostico.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmInfoFactura.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmInfoFactura.Designer.cs">
+      <DependentUpon>FrmInfoFactura.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmInformacion.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmInformacion.Designer.cs">
       <DependentUpon>FrmInformacion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmInfoTratamiento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmInfoTratamiento.Designer.cs">
+      <DependentUpon>FrmInfoTratamiento.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmInicioSesion.cs">
       <SubType>Form</SubType>
@@ -182,6 +200,12 @@
     <Compile Include="FrmRegistroCita.Designer.cs">
       <DependentUpon>FrmRegistroCita.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmSeleccionTratamiento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmSeleccionTratamiento.Designer.cs">
+      <DependentUpon>FrmSeleccionTratamiento.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FrmRegistrar.cs">
@@ -211,6 +235,9 @@
     <EmbeddedResource Include="FrmGestionCita.resx">
       <DependentUpon>FrmGestionCita.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmGestionFactura.resx">
+      <DependentUpon>FrmGestionFactura.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmGestionPaciente.resx">
       <DependentUpon>FrmGestionPaciente.cs</DependentUpon>
     </EmbeddedResource>
@@ -220,8 +247,14 @@
     <EmbeddedResource Include="FrmInfoDiagnostico.resx">
       <DependentUpon>FrmInfoDiagnostico.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmInfoFactura.resx">
+      <DependentUpon>FrmInfoFactura.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmInformacion.resx">
       <DependentUpon>FrmInformacion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmInfoTratamiento.resx">
+      <DependentUpon>FrmInfoTratamiento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmIngreso.resx">
       <DependentUpon>FrmIngreso.cs</DependentUpon>
@@ -258,6 +291,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmRegistroCita.resx">
       <DependentUpon>FrmRegistroCita.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmSeleccionTratamiento.resx">
+      <DependentUpon>FrmSeleccionTratamiento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -328,6 +364,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Images\IconDolar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Images\IconFactura.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
